# athome-backend-bachelors-thesis

./: .gitattributes  .gitignore  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tmp.txt
migrations/: env.py
sql/: test_db.sql
src/: app.py  composition_root.py  config.py  di.py  wsgi.py
src/api/: blueprints.py  error_handlers.py  responses.py
src/api/agents/: agents_router.py
src/api/auth/: auth_router.py
src/api/estate/: estate_router.py
src/api/media/: media_router.py
src/application/admin/: __init__.py  change_user_role_use_case.py  delete_admin_user_use_case.py  get_admin_filtered_estate_use_case.py  get_admin_user_use_case.py  list_agents_use_case.py  list_users_use_case.py
src/application/agent/: get_agent_description_use_case.py
src/application/auth/: login_user_use_case.py  register_user_use_case.py  resend_verification_use_case.py  reset_password_use_case.py  verify_email_use_case.py  verify_new_password_use_case.py
src/application/estate/: create_estate_use_case.py  delete_estate_use_case.py  email_to_estate_agent_use_case.py  estate_response_mapper.py  get_agent_own_estates_use_case.py  get_estate_use_case.py  get_filtered_estate_use_case.py  post_draft_estate_use_case.py  suggest_estate_use_case.py  toggle_saved_estate_use_case.py  update_estate_use_case.py
src/cli/: __init__.py  media_commands.py  user_commands.py
src/composition/: __init__.py  application_container.py  build_application_container.py  container_access.py  dependency_overrides.py
src/configuration/: __init__.py  application_urls.py  configure_app.py  environment_mapping.py  validation.py
src/domain/user/: user_model.py  (+1 more)
src/exceptions/: error_catalog.py  exceptions_utils.py
src/infrastructure/: db.py  sqlalchemy_transaction_manager.py
src/jobs/: cleanup_unverified_users.py
src/schemas/: helpers.py  parent_types.py  types.py
src/scripts/: init_db.py  reset_dbs.py
src/security/: __init__.py  authorization.py  password_crypto.py  token_crypto.py
(+238 files in other folders)
