[project]
name = "athome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=4.1.1",
    "isort>=7.0.0",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.22",
    "pip>=26.1.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-extra-types>=2.11.0",
    "pydantic[email]>=2.12.5",
    "pyright>=1.1.409",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "resend>=2.19.0",
    "ruff>=0.14.14",
    "sqlalchemy>=2.0.45",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["src/tests"]
