[project]
name = "athome-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=5.0.0",
    "flask>=3.1.2",
    "flask-jwt-extended>=4.7.1",
    "flask-limiter>=4.1.1",
    "jinja2>=3.1.6",
    "phonenumbers>=9.0.22",
    "psycopg>=3.3.4",
    "pydantic-extra-types>=2.11.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "resend>=2.19.0",
    "sqlalchemy>=2.0.45",
]

[tool.isort]
profile = "black"
line_length = 79

[tool.ruff]
line-length = 79


[tool.ruff.lint]
extend-select = ["I", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"src" = { msg = "Do not import through `src`; import from the top-level package instead." }


[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["src/tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.10"
extraPaths = ["src"]
typeCheckingMode = "standard"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-env>=1.6.0",
    "ruff>=0.15.21",
]
